--- a/day6/exam02_mw/package.json
+++ b/day6/exam02_mw/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev":"cross-env NODE_ENV=dev nodmon index",
+    "dev":"cross-env NODE_ENV=dev nodemon index",
     "start":"cross-env NODE_ENV=product node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
