--- a/day6/exam02_mw/package.json
+++ b/day6/exam02_mw/package.json
@@ -5,15 +5,16 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev":"cross-env NODE_ENV=dev nodemon index",
-    "start":"cross-env NODE_ENV=product node index",
+    "dev": "cross-env NODE_ENV=dev nodemon index",
+    "start": "cross-env NODE_ENV=product node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
